# hermes-captcha-solver

./: .env.example  .gitignore  README.md  pyproject.toml
hermes_captcha/: __init__.py  config.py  detector.py  ocr_solver.py  server.py  session.py  solver.py  vision_solver.py
skills/captcha-solver/: SKILL.md
skills/gmail-browser/: SKILL.md
skills/悬崖勒马/: SKILL.md
